deploy/overlays/local/shared/components/terminology-server-proxy/terminology-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: terminology-server-proxy-gateway
  namespace: dh-health
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: terminology.local.dh.unimaas.nl
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: terminology-server-proxy-route
  namespace: dh-health
spec:
  parentRefs:
    - name: terminology-server-proxy-gateway
  hostnames:
    - terminology.local.dh.unimaas.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: terminology-server-proxy
          port: 8080
